<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".PrivacyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_title"
            android:textSize="25dp"
            android:layout_margin="5dp"
            android:textColor="@color/main_color"
            android:textStyle="bold"

            />   <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_1"
        android:layout_margin="8dp"
            android:textSize="15dp"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_title_2"
            android:textSize="25dp"
            android:layout_margin="5dp"
            android:textColor="@color/main_color"
            android:textStyle="bold"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_2"
            android:textSize="15dp"
            android:layout_margin="8dp"


            />


    </LinearLayout>


</ScrollView>