<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".authentication.SignInActivity">



        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/email_edt"

            android:textAlignment="viewStart"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:hint="@string/password_edt"
            android:textAlignment="viewStart"

            android:inputType="textPassword"
            android:gravity="start"
            android:padding="10dp" />
        <!-- Login Button -->

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_btn"
            android:onClick="goHome"
            android:text="@string/login_btn"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="returnRegister"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="10dp"
            android:text="@string/register_txt"
            android:textColor="@color/forth_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/log_progressBar"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:indeterminateTint="@color/main_color"
            android:visibility="invisible" />


</LinearLayout>